--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
     <link rel="stylesheet" href="bootstrap.min.css">
     <title>Admin Team</title>
     <style>
-        .wrapper {
-            max-width: 1700px;
-            width: 100%;
-            margin: 0 auto;
-            padding: 0 10px;
+
+        .table-sm th, .table-sm td {
+            padding: 0.5rem;
+            font-size: 14px;
         }
     </style>
 </head>
 
 <body>
-    <main class="wrapper">
-        <h1 class="my-3 text-center">Tasks Tracker</h1>
+    <main class="container">
+        <h1 class="display-5 my-3 text-center">Tasks Tracker</h1>
         <div class="my-5 col-lg-4 offset-lg-4 col-lg-col-sm-12">
             <!-- <div id="messageAlert" class="alert text-center d-none" role="alert"></div>      -->
             <form id="addForm">
@@ -72,14 +71,14 @@
             </form>
         </div>
 
-        <table class="table table-bordered table-hover">
+        <table class="table table-striped table-sm table-bordered table-hover">
             <thead>
-                <tr>
-                    <th scope="col">Date</th>
-                    <th scope="col">Activity</th>
-                    <th scope="col">Notes</th>
-                    <th scope="col">Owner</th>
-                    <th scope="col">Manage</th>
+                <tr class="bg-primary">
+                    <th class="text-light" scope="col">Date</th>
+                    <th class="text-light" scope="col">Activity</th>
+                    <th class="text-light" scope="col">Notes</th>
+                    <th class="text-light" scope="col">Owner</th>
+                    <th class="text-light" scope="col">Manage</th>
                 </tr>
             </thead>
             <tbody id="tasksList"></tbody>
