--- a/index.html
+++ b/index.html
@@ -9,21 +9,14 @@
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Admin Team</title>
-    <style>
-
-        .table-sm th, .table-sm td {
-            padding: 0.5rem;
-            font-size: 14px;
-        }
-    </style>
 </head>
 
 <body>
     <main class="container">
         <h1 class="display-5 my-3 text-center">Tasks Tracker</h1>
         <div class="my-5 col-lg-6 offset-lg-3 col-lg-col-sm-12">
-            <!-- <div id="messageAlert" class="alert text-center d-none" role="alert"></div>      -->
             <form id="addForm">
                 <div class="form-group">
                     <input type="text" class="form-control" id="notes" aria-describedby="emailHelp"
@@ -74,18 +67,41 @@
         <table class="table table-striped table-sm table-bordered table-hover">
             <thead>
                 <tr class="bg-primary">
-                    <th class="text-light" scope="col">Date</th>
-                    <th class="text-light" scope="col">Activity</th>
-                    <th class="text-light" scope="col">Notes</th>
-                    <th class="text-light" scope="col">Owner</th>
-                    <th class="text-light" scope="col">Manage</th>
+                    <th class="text-light text-center" scope="col">Date</th>
+                    <th class="text-light text-center" scope="col">Activity</th>
+                    <th class="text-light text-center" scope="col">Notes</th>
+                    <th class="text-light text-center" scope="col">Owner</th>
+                    <th class="text-light text-center" scope="col">Manage</th>
                 </tr>
             </thead>
             <tbody id="tasksList"></tbody>
         </table>
-
     </main>
 
+    <!-- Modal -->
+    <div class="modal fade" id="deletePrompt" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete this task?</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modalBodyMessage">
+                    Task Name
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Forget it.</button>
+                    <button type="button" class="btn btn-primary" id="deleteTaskBtn" data-dismiss="modal">Yes. I am sure.</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
