--- a/index.html
+++ b/index.html
@@ -16,52 +16,102 @@
 <body>
     <main class="container">
         <h1 class="display-5 my-3 text-center">Tasks Tracker</h1>
-        <div class="my-5 col-lg-6 offset-lg-3 col-lg-col-sm-12">
-            <form id="addForm">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="notes" aria-describedby="emailHelp"
-                        placeholder="Add some notes ...">
-                </div>
-                <div class="form-group">
-                    <select id="owner" class="custom-select" placeholder="something">
-                        <option value="default"></option>
-                        <option value="Admin Team">Admin Team</option>
-                        <option value="Chris Duffy">Chris Duffy</option>
-                        <option value="Christopher Audette">Christopher Audette</option>
-                        <option value="Frank Liu">Frank Liu</option>
-                        <option value="Jen Johnson">Jen Johnson</option>
-                        <option value="Maria Shettler">Maria Shettler</option>
-                        <option value="May D, Curtis K.">May D, Curtis K.</option>
-                        <option value="Mike Litorco">Mike Litorco</option>
-                        <option value="Sarah Walczak">Sarah Walczak</option>
-                        <option value="Will Vo">Will Vo</option>
-                        <option value="Referral Agent">Referral Agent</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <select id="activityType" class="custom-select">
-                        <option value="default" placeholder="something"></option>
-                        <option value="Ad-hoc Task">Ad-hoc Task</option>
-                        <option value="Conveyancing">Conveyancing</option>
-                        <option value="Filing - Expenses">Filing - Expenses</option>
-                        <option value="Filing - Income">Filing - Income</option>
-                        <option value="Leads Management">Leads Management</option>
-                        <option value="Leads Management - ISA">Leads Management - ISA</option>
-                        <option value="Listing Emails">Listing Emails</option>
-                        <option value="Listing Task">Listing Task</option>
-                        <option value="New Deal - Agent Double-Ender">New Deal - Agent Double-Ender</option>
-                        <option value="New Deal - Buyer Side">New Deal - Buyer Side</option>
-                        <option value="New Deal - Referral">New Deal - Referral</option>
-                        <option value="New Deal - Seller Side">New Deal - Seller Side</option>
-                        <option value="New Listing">New Listing</option>
-                        <option value="Reports">Reports</option>
-                        <option value="Review Request Email">Review Request Email</option>
-                        <option value="Social Media Task">Social Media Task</option>
-                    </select>
-                </div>
-                <button type="submit" id="addTask" class="btn btn-outline-primary btn-block btn-lg">Add this to
-                    Tasks</button>
-            </form>
+        <div class="row">
+            <div class="my-5 col-lg-6 col-sm-12">
+                <form id="addForm">
+                    <div class="form-group">
+                        <select id="owner" class="custom-select" placeholder="something">
+                            <option value="default">select owner</option>
+                            <option value="Admin Team">Admin Team</option>
+                            <option value="Chris Duffy">Chris Duffy</option>
+                            <option value="Christopher Audette">Christopher Audette</option>
+                            <option value="Frank Liu">Frank Liu</option>
+                            <option value="Jen Johnson">Jen Johnson</option>
+                            <option value="Maria Shettler">Maria Shettler</option>
+                            <option value="May D, Curtis K.">May D, Curtis K.</option>
+                            <option value="Mike Litorco">Mike Litorco</option>
+                            <option value="Sarah Walczak">Sarah Walczak</option>
+                            <option value="Will Vo">Will Vo</option>
+                            <option value="Referral Agent">Referral Agent</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select id="activityType" class="custom-select">
+                            <option value="default">select activity type</option>
+                            <option value="Ad-hoc Task">Ad-hoc Task</option>
+                            <option value="Conveyancing">Conveyancing</option>
+                            <option value="Filing - Expenses">Filing - Expenses</option>
+                            <option value="Filing - Income">Filing - Income</option>
+                            <option value="Leads Management">Leads Management</option>
+                            <option value="Leads Management - ISA">Leads Management - ISA</option>
+                            <option value="Listing Emails">Listing Emails</option>
+                            <option value="Listing Task">Listing Task</option>
+                            <option value="New Deal - Agent Double-Ender">New Deal - Agent Double-Ender</option>
+                            <option value="New Deal - Buyer Side">New Deal - Buyer Side</option>
+                            <option value="New Deal - Referral">New Deal - Referral</option>
+                            <option value="New Deal - Seller Side">New Deal - Seller Side</option>
+                            <option value="New Listing">New Listing</option>
+                            <option value="Reports">Reports</option>
+                            <option value="Review Request Email">Review Request Email</option>
+                            <option value="Social Media Task">Social Media Task</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="notes" aria-describedby="emailHelp"
+                            placeholder="Add some notes ...">
+                    </div>                              
+                    <div class="text-center">
+                        <button id="add_task"class="btn btn-outline-danger btn-lg">Add this task</button>
+                    </div>         
+                </form>
+            </div>
+            <div class="my-5 col-lg-6 col-sm-12">
+                <form id="searchForm">
+                    <div class="form-group">
+                        <input type="date" name="search_date" id="search_date" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <select id="ownerSearch" class="custom-select" placeholder="something">
+                            <option value="default">select owner</option>
+                            <option value="Admin Team">Admin Team</option>
+                            <option value="Chris Duffy">Chris Duffy</option>
+                            <option value="Christopher Audette">Christopher Audette</option>
+                            <option value="Frank Liu">Frank Liu</option>
+                            <option value="Jen Johnson">Jen Johnson</option>
+                            <option value="Maria Shettler">Maria Shettler</option>
+                            <option value="May D, Curtis K.">May D, Curtis K.</option>
+                            <option value="Mike Litorco">Mike Litorco</option>
+                            <option value="Sarah Walczak">Sarah Walczak</option>
+                            <option value="Will Vo">Will Vo</option>
+                            <option value="Referral Agent">Referral Agent</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select id="activityTypeSearch" class="custom-select">
+                            <option value="default">select activity type</option>
+                            <option value="Ad-hoc Task">Ad-hoc Task</option>
+                            <option value="Conveyancing">Conveyancing</option>
+                            <option value="Filing - Expenses">Filing - Expenses</option>
+                            <option value="Filing - Income">Filing - Income</option>
+                            <option value="Leads Management">Leads Management</option>
+                            <option value="Leads Management - ISA">Leads Management - ISA</option>
+                            <option value="Listing Emails">Listing Emails</option>
+                            <option value="Listing Task">Listing Task</option>
+                            <option value="New Deal - Agent Double-Ender">New Deal - Agent Double-Ender</option>
+                            <option value="New Deal - Buyer Side">New Deal - Buyer Side</option>
+                            <option value="New Deal - Referral">New Deal - Referral</option>
+                            <option value="New Deal - Seller Side">New Deal - Seller Side</option>
+                            <option value="New Listing">New Listing</option>
+                            <option value="Reports">Reports</option>
+                            <option value="Review Request Email">Review Request Email</option>
+                            <option value="Social Media Task">Social Media Task</option>
+                        </select>
+                    </div> 
+                    <div class="text-center">
+                        <button id="search_tasks"class="btn btn-outline-danger btn-lg">Search tasks</button>
+                    </div>
+                </form>
+            </div>
         </div>
 
         <table class="table table-striped table-sm table-bordered table-hover">
