--- a/index.html
+++ b/index.html
@@ -1,254 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon-todos.ico" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Admin Team</title>
-  </head>
-
-  <body>
-    <main class="container">
-      <h1 class="display-5 my-3 text-center">Tasks Tracker</h1>
-      <div class="row" id="tasks_input">
-        <div class="my-5 col-lg-6 col-sm-12">
-          <form id="addForm">
-            <div class="form-group">
-              <select id="owner" class="custom-select" placeholder="something">
-                <option value="default">select owner</option>
-                <option value="Admin Team">Admin Team</option>
-                <option value="Chris Duffy">Chris Duffy</option>
-                <option value="Christopher Audette">Christopher Audette</option>
-                <option value="Frank Liu">Frank Liu</option>
-                <option value="Jen Johnson">Jen Johnson</option>
-                <option value="Maria Shettler">Maria Shettler</option>
-                <option value="May D, Curtis K.">May D, Curtis K.</option>
-                <option value="Mike Litorco">Mike Litorco</option>
-                <option value="Sarah Walczak">Sarah Walczak</option>
-                <option value="Will Vo">Will Vo</option>
-                <option value="Referral Agent">Referral Agent</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <select id="activityType" class="custom-select">
-                <option value="default">select activity type</option>
-                <option value="Ad-hoc Task">Ad-hoc Task</option>
-                <option value="Conveyancing">Conveyancing</option>
-                <option value="Filing - Expenses">Filing - Expenses</option>
-                <option value="Filing - Income">Filing - Income</option>
-                <option value="Leads Management">Leads Management</option>
-                <option value="Leads Management - ISA">
-                  Leads Management - ISA
-                </option>
-                <option value="Listing Emails">Listing Emails</option>
-                <option value="Listing Task">Listing Task</option>
-                <option value="New Deal - Agent Double-Ender">
-                  New Deal - Agent Double-Ender
-                </option>
-                <option value="New Deal - Buyer Side">
-                  New Deal - Buyer Side
-                </option>
-                <option value="New Deal - Referral">New Deal - Referral</option>
-                <option value="New Deal - Seller Side">
-                  New Deal - Seller Side
-                </option>
-                <option value="New Listing">New Listing</option>
-                <option value="Reports">Reports</option>
-                <option value="Review Request Email">
-                  Review Request Email
-                </option>
-                <option value="Social Media Task">Social Media Task</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <input
-                type="text"
-                class="form-control"
-                id="notes"
-                aria-describedby="emailHelp"
-                placeholder="Add some notes ..."
-              />
-            </div>
-            <div class="text-center">
-              <button id="add_task" class="btn btn-outline-danger btn-lg">
-                Add this task
-              </button>
-            </div>
-          </form>
-        </div>
-        <div class="my-5 col-lg-6 col-sm-12">
-          <form id="searchForm">
-            <div class="form-group">
-              <input
-                type="date"
-                name="search_date"
-                id="search_date"
-                class="form-control"
-              />
-            </div>
-            <div class="form-group">
-              <select
-                id="ownerSearch"
-                class="custom-select"
-                placeholder="something"
-              >
-                <option value="default">select owner</option>
-                <option value="Admin Team">Admin Team</option>
-                <option value="Chris Duffy">Chris Duffy</option>
-                <option value="Christopher Audette">Christopher Audette</option>
-                <option value="Frank Liu">Frank Liu</option>
-                <option value="Jen Johnson">Jen Johnson</option>
-                <option value="Maria Shettler">Maria Shettler</option>
-                <option value="May D, Curtis K.">May D, Curtis K.</option>
-                <option value="Mike Litorco">Mike Litorco</option>
-                <option value="Sarah Walczak">Sarah Walczak</option>
-                <option value="Will Vo">Will Vo</option>
-                <option value="Referral Agent">Referral Agent</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <select id="activityTypeSearch" class="custom-select">
-                <option value="default">select activity type</option>
-                <option value="Ad-hoc Task">Ad-hoc Task</option>
-                <option value="Conveyancing">Conveyancing</option>
-                <option value="Filing - Expenses">Filing - Expenses</option>
-                <option value="Filing - Income">Filing - Income</option>
-                <option value="Leads Management">Leads Management</option>
-                <option value="Leads Management - ISA">
-                  Leads Management - ISA
-                </option>
-                <option value="Listing Emails">Listing Emails</option>
-                <option value="Listing Task">Listing Task</option>
-                <option value="New Deal - Agent Double-Ender">
-                  New Deal - Agent Double-Ender
-                </option>
-                <option value="New Deal - Buyer Side">
-                  New Deal - Buyer Side
-                </option>
-                <option value="New Deal - Referral">New Deal - Referral</option>
-                <option value="New Deal - Seller Side">
-                  New Deal - Seller Side
-                </option>
-                <option value="New Listing">New Listing</option>
-                <option value="Reports">Reports</option>
-                <option value="Review Request Email">
-                  Review Request Email
-                </option>
-                <option value="Social Media Task">Social Media Task</option>
-              </select>
-            </div>
-            <div class="text-center">
-              <button id="search_tasks" class="btn btn-outline-danger btn-lg">
-                Search tasks
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-
-      <table class="table table-striped table-sm table-bordered table-hover">
-        <thead>
-          <tr class="bg-primary">
-            <th class="text-light text-center" scope="col">Date</th>
-            <th class="text-light text-center" scope="col">Activity</th>
-            <th class="text-light text-center" scope="col">Notes</th>
-            <th class="text-light text-center" scope="col">Owner</th>
-            <th class="text-light text-center" scope="col">Manage</th>
-          </tr>
-        </thead>
-        <tbody id="tasksList"></tbody>
-      </table>
-    </main>
-
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="deletePrompt"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Delete this task?
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body" id="modalBodyMessage">Task Name</div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Forget it.
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              id="deleteTaskBtn"
-              data-dismiss="modal"
-            >
-              Yes. I am sure.
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
-
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: 'AIzaSyCMR-h04L3I71W3IOxq7af3r-_uhES-EM8',
-        authDomain: 'the-group---tasks-tracker.firebaseapp.com',
-        databaseURL: 'https://the-group---tasks-tracker.firebaseio.com',
-        projectId: 'the-group---tasks-tracker',
-        storageBucket: 'the-group---tasks-tracker.appspot.com',
-        messagingSenderId: '1013793128046',
-        appId: '1:1013793128046:web:7920ad7ec0bb2a3e2f707f',
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      const db = firebase.firestore();
-    </script>
-
-    <script src="script.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon-todos.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous"/><title>React App</title><link href="/static/css/main.a4b9c5e6.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="https://kit.fontawesome.com/a076d05399.js"></script><script>!function(e){function r(r){for(var n,a,i=r[0],l=r[1],f=r[2],p=0,s=[];p<i.length;p++)a=i[p],Object.prototype.hasOwnProperty.call(o,a)&&o[a]&&s.push(o[a][0]),o[a]=0;for(n in l)Object.prototype.hasOwnProperty.call(l,n)&&(e[n]=l[n]);for(c&&c(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,i=1;i<t.length;i++){var l=t[i];0!==o[l]&&(n=!1)}n&&(u.splice(r--,1),e=a(a.s=t[0]))}return e}var n={},o={1:0},u=[];function a(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,a),t.l=!0,t.exports}a.m=e,a.c=n,a.d=function(e,r,t){a.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},a.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},a.t=function(e,r){if(1&r&&(e=a(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(a.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)a.d(t,n,function(r){return e[r]}.bind(null,n));return t},a.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return a.d(r,"a",r),r},a.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},a.p="/";var i=this["webpackJsonpreact---admin-v2"]=this["webpackJsonpreact---admin-v2"]||[],l=i.push.bind(i);i.push=r,i=i.slice();for(var f=0;f<i.length;f++)r(i[f]);var c=l;t()}([])</script><script src="/static/js/2.cefae7e5.chunk.js"></script><script src="/static/js/main.5a1366de.chunk.js"></script></body></html>
